# xudt-manager

./: Cargo.toml
examples/: self_defined_lockscript.rs  xudt_issue.rs  xudt_transfer.rs
src/: lib.rs
