[package]
name = "xudt-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
anyhow = "1.0.63"
secp256k1 = { version = "0.24", features = ["recovery"] }

ckb-types = {version = "= 0.116.1"}
ckb-jsonrpc-types = {version = "= 0.116.1"}
ckb-hash = { version = "= 0.116.1"}
ckb-sdk = "=3.2.1"
scroll = "0.12.0"

[dev-dependencies]